addition of detail html pages

--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>flashcard-app</title>
+    <title>Property Manager</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -19,10 +19,10 @@
                 <a class="nav-link" ui-sref='home'>Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref='tenant'>Tenants</a>
+                <a class="nav-link" ui-sref='property'>Properties</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref='property'>Properties</a>
+                <a class="nav-link" ui-sref='tenant'>Tenants</a>
             </li>
         </ul>
     </nav>
